# Hermes

./: .gitignore  README.md  hearth-card-asset.nuitka-package.config.yml  pyproject.toml
.github/workflows/: release.yml
src/: __main__.py  build_script.py  cli.py  helpers.py  parse_args.py
src/extract/: card.py  image.py
src/extract/audio/: __init__.py  card_sound_spell.py  core.py  effect_def.py  emote.py
src/typed_dicts/: card_def.py
src/unity3d/: asset_manifest.py  common.py
src/utils/: extract_audio.py  extract_image.py  helper.py
